--- a/TeX-files/Pset_2/Pset_2.tex
+++ b/TeX-files/Pset_2/Pset_2.tex
@@ -361,30 +361,33 @@
     
     \geometry{verbose,tmargin=1in,bmargin=1in,lmargin=1in,rmargin=1in}
     
-\makeatletter
-\renewcommand{\@seccntformat}[1]{}
-\makeatother  
-
-\begin{document}
-    \title{CS 156a - Problem Set 2}
-    \author{Samuel Patrone, 2140749}
-    \maketitle
     
 
-The following notebook is publicly available at the following
-\href{https://github.com/spatrone/CS156A-Caltech.git}{link}.
+\begin{document}
+    
+    \maketitle
+    
+    
 
-\tableofcontents
+    
+    \hypertarget{cs-156a---problem-set-2}{%
+\section{CS 156a - Problem Set 2}\label{cs-156a---problem-set-2}}
+
+\hypertarget{patrone-samuel-2140749}{%
+\subsubsection{Patrone Samuel, 2140749}\label{patrone-samuel-2140749}}
+
+The following notebook is publicly available at
+https://github.com/spatrone/CS156A-Caltech.git.
 
     \hypertarget{problem-1}{%
-\section{Problem 1}\label{problem-1}}
+\subsection{Problem 1}\label{problem-1}}
 
 \hypertarget{answer-b-0.01}{%
-\subsection{\texorpdfstring{Answer: {[}b{]}
+\subsubsection{\texorpdfstring{Answer: {[}b{]}
 \(0.01\)}{Answer: {[}b{]} 0.01}}\label{answer-b-0.01}}
 
 \hypertarget{code}{%
-\subsection{Code:}\label{code}}
+\subsubsection{Code:}\label{code}}
 
     \begin{tcolorbox}[breakable, size=fbox, boxrule=1pt, pad at break*=1mm,colback=cellbackground, colframe=cellborder]
 \prompt{In}{incolor}{1}{\boxspacing}
@@ -476,19 +479,19 @@ The average value of nu\_min is 0.03756
 \end{tcolorbox}
 
     \begin{center}
-    \adjustimage{max size={0.9\linewidth}{0.9\paperheight}}{output_7_0.png}
+    \adjustimage{max size={0.9\linewidth}{0.9\paperheight}}{output_6_0.png}
     \end{center}
     { \hspace*{\fill} \\}
     
     \hypertarget{problem-2}{%
-\section{Problem 2}\label{problem-2}}
+\subsection{Problem 2}\label{problem-2}}
 
 \hypertarget{answer-d-c_1-rm-and-c_rand}{%
-\subsection{\texorpdfstring{Answer: {[}d{]}
+\subsubsection{\texorpdfstring{Answer: {[}d{]}
 \(c_1 \, {\rm and}\, c_{rand}\)}{Answer: {[}d{]} c\_1 \textbackslash{}, \{\textbackslash{}rm and\}\textbackslash{}, c\_\{rand\}}}\label{answer-d-c_1-rm-and-c_rand}}
 
 \hypertarget{derivation}{%
-\subsection{Derivation:}\label{derivation}}
+\subsubsection{Derivation:}\label{derivation}}
 
 We expect the single bin's Hoeffding Inequality, in formulae
 
@@ -545,19 +548,19 @@ the \(\nu_{min}\) distribution.
 \end{tcolorbox}
 
     \begin{center}
-    \adjustimage{max size={0.9\linewidth}{0.9\paperheight}}{output_9_0.png}
+    \adjustimage{max size={0.9\linewidth}{0.9\paperheight}}{output_8_0.png}
     \end{center}
     { \hspace*{\fill} \\}
     
     \hypertarget{problem-3}{%
-\section{Problem 3}\label{problem-3}}
+\subsection{Problem 3}\label{problem-3}}
 
 \hypertarget{answer-e-1-lambda1-mulambdamu}{%
-\subsection{\texorpdfstring{Answer: {[}e{]}
+\subsubsection{\texorpdfstring{Answer: {[}e{]}
 \((1-\lambda)(1-\mu)+\lambda\mu\)}{Answer: {[}e{]} (1-\textbackslash{}lambda)(1-\textbackslash{}mu)+\textbackslash{}lambda\textbackslash{}mu}}\label{answer-e-1-lambda1-mulambdamu}}
 
 \hypertarget{derivation}{%
-\subsection{Derivation:}\label{derivation}}
+\subsubsection{Derivation:}\label{derivation}}
 
 In this problem, there are two binary functions \(f\) and \(h\). Let be
 \(P(h({\bf x})\neq f({\bf x}))=\mu\) the probability of \(h({\bf x})\)
@@ -584,14 +587,14 @@ P(h({\bf x})\neq y)= P(h({\bf x}) = f({\bf x}))P(y \neq f({\bf x})|{\bf x})+P(h(
 \]
 
     \hypertarget{problem-4}{%
-\section{Problem 4}\label{problem-4}}
+\subsection{Problem 4}\label{problem-4}}
 
 \hypertarget{answer-b-0.5}{%
-\subsection{\texorpdfstring{Answer: {[}b{]}
+\subsubsection{\texorpdfstring{Answer: {[}b{]}
 \(0.5\)}{Answer: {[}b{]} 0.5}}\label{answer-b-0.5}}
 
 \hypertarget{derivation}{%
-\subsection{Derivation:}\label{derivation}}
+\subsubsection{Derivation:}\label{derivation}}
 
 We just solve for the derivative of the previous expression with respect
 to \(\mu\) to be zero, i.e.
@@ -602,17 +605,17 @@ to \(\mu\) to be zero, i.e.
 \]
 
     \hypertarget{problems-5-6}{%
-\section{Problems 5-6}\label{problems-5-6}}
+\subsection{Problems 5-6}\label{problems-5-6}}
 
 \hypertarget{answers-c-0.01-c-0.01}{%
-\subsection{\texorpdfstring{Answers: {[}c{]} \(0.01\) , {[}c{]}
+\subsubsection{\texorpdfstring{Answers: {[}c{]} \(0.01\) , {[}c{]}
 \(0.01\)}{Answers: {[}c{]} 0.01 , {[}c{]} 0.01}}\label{answers-c-0.01-c-0.01}}
 
 \hypertarget{code}{%
-\subsection{Code:}\label{code}}
+\subsubsection{Code:}\label{code}}
 
     \begin{tcolorbox}[breakable, size=fbox, boxrule=1pt, pad at break*=1mm,colback=cellbackground, colframe=cellborder]
-\prompt{In}{incolor}{22}{\boxspacing}
+\prompt{In}{incolor}{1}{\boxspacing}
 \begin{Verbatim}[commandchars=\\\{\}]
 \PY{k+kn}{import} \PY{n+nn}{numpy} \PY{k}{as} \PY{n+nn}{np}
 \PY{k+kn}{import} \PY{n+nn}{matplotlib}\PY{n+nn}{.}\PY{n+nn}{pyplot} \PY{k}{as} \PY{n+nn}{plt}
@@ -703,7 +706,7 @@ to \(\mu\) to be zero, i.e.
 \end{tcolorbox}
 
     \begin{tcolorbox}[breakable, size=fbox, boxrule=1pt, pad at break*=1mm,colback=cellbackground, colframe=cellborder]
-\prompt{In}{incolor}{23}{\boxspacing}
+\prompt{In}{incolor}{2}{\boxspacing}
 \begin{Verbatim}[commandchars=\\\{\}]
 \PY{n}{Npts}\PY{o}{=}\PY{l+m+mi}{100}  
 \PY{n}{Nruns}\PY{o}{=}\PY{l+m+mi}{1000}
@@ -715,22 +718,22 @@ to \(\mu\) to be zero, i.e.
     \begin{Verbatim}[commandchars=\\\{\}]
 \#\#\#\#\#\#\#
 Here's the result for N\_runs= 1000 with N\_pts= 100
-Average Ein: 0.038200000000000046
-Average Eout: 0.04774
+Average Ein: 0.037800000000000104
+Average Eout: 0.04743100000000001
     \end{Verbatim}
 
     \hypertarget{problem-7}{%
-\section{Problem 7}\label{problem-7}}
+\subsection{Problem 7}\label{problem-7}}
 
 \hypertarget{answer-a-1}{%
-\subsection{\texorpdfstring{Answer: {[}a{]}
+\subsubsection{\texorpdfstring{Answer: {[}a{]}
 \(1\)}{Answer: {[}a{]} 1}}\label{answer-a-1}}
 
 \hypertarget{code}{%
-\subsection{Code:}\label{code}}
+\subsubsection{Code:}\label{code}}
 
     \begin{tcolorbox}[breakable, size=fbox, boxrule=1pt, pad at break*=1mm,colback=cellbackground, colframe=cellborder]
-\prompt{In}{incolor}{24}{\boxspacing}
+\prompt{In}{incolor}{12}{\boxspacing}
 \begin{Verbatim}[commandchars=\\\{\}]
 \PY{k}{def} \PY{n+nf}{PLA\PYZus{}run\PYZus{}linreginit}\PY{p}{(}\PY{n}{N\PYZus{}pts}\PY{p}{,} \PY{n}{plot}\PY{o}{=}\PY{k+kc}{False}\PY{p}{)}\PY{p}{:}
     
@@ -770,7 +773,7 @@ Average Eout: 0.04774
 \PY{k}{def} \PY{n+nf}{average\PYZus{}PLA}\PY{p}{(}\PY{n}{N\PYZus{}pts}\PY{p}{,}\PY{n}{N\PYZus{}runs}\PY{p}{)}\PY{p}{:}
     \PY{n}{average\PYZus{}iter}\PY{o}{=}\PY{l+m+mi}{0}
     \PY{k}{for} \PY{n}{i} \PY{o+ow}{in} \PY{n+nb}{range}\PY{p}{(}\PY{n}{N\PYZus{}runs}\PY{p}{)}\PY{p}{:}
-        \PY{n}{average\PYZus{}iter}\PY{o}{=}\PY{n}{PLA\PYZus{}run\PYZus{}linreginit}\PY{p}{(}\PY{n}{Npts}\PY{p}{)}\PY{p}{[}\PY{l+m+mi}{1}\PY{p}{]}
+        \PY{n}{average\PYZus{}iter}\PY{o}{+}\PY{o}{=}\PY{n}{PLA\PYZus{}run\PYZus{}linreginit}\PY{p}{(}\PY{n}{Npts}\PY{p}{)}\PY{p}{[}\PY{l+m+mi}{1}\PY{p}{]}
     \PY{n+nb}{print}\PY{p}{(}\PY{l+s+s2}{\PYZdq{}}\PY{l+s+s2}{\PYZsh{}\PYZsh{}\PYZsh{}\PYZsh{}\PYZsh{}\PYZsh{}\PYZsh{}}\PY{l+s+s2}{\PYZdq{}}\PY{p}{)}
     \PY{n+nb}{print}\PY{p}{(}\PY{l+s+s2}{\PYZdq{}}\PY{l+s+s2}{Here}\PY{l+s+s2}{\PYZsq{}}\PY{l+s+s2}{s the result for N\PYZus{}runs=}\PY{l+s+s2}{\PYZdq{}}\PY{p}{,}\PY{n}{N\PYZus{}runs}\PY{p}{,}\PY{l+s+s2}{\PYZdq{}}\PY{l+s+s2}{with N\PYZus{}pts=}\PY{l+s+s2}{\PYZdq{}}\PY{p}{,}\PY{n}{N\PYZus{}pts}\PY{p}{)}
     \PY{n+nb}{print}\PY{p}{(}\PY{l+s+s2}{\PYZdq{}}\PY{l+s+s2}{Average iterations for convergence:}\PY{l+s+s2}{\PYZdq{}}\PY{p}{,}\PY{n}{average\PYZus{}iter}\PY{o}{/}\PY{n}{N\PYZus{}runs}\PY{p}{)}
@@ -778,7 +781,7 @@ Average Eout: 0.04774
 \end{tcolorbox}
 
     \begin{tcolorbox}[breakable, size=fbox, boxrule=1pt, pad at break*=1mm,colback=cellbackground, colframe=cellborder]
-\prompt{In}{incolor}{25}{\boxspacing}
+\prompt{In}{incolor}{14}{\boxspacing}
 \begin{Verbatim}[commandchars=\\\{\}]
 \PY{n}{Npts}\PY{o}{=}\PY{l+m+mi}{10}
 \PY{n}{Nruns}\PY{o}{=}\PY{l+m+mi}{1000}
@@ -790,11 +793,11 @@ Average Eout: 0.04774
     \begin{Verbatim}[commandchars=\\\{\}]
 \#\#\#\#\#\#\#
 Here's the result for N\_runs= 1000 with N\_pts= 10
-Average iterations for convergence: 0.0
+Average iterations for convergence: 4.65
     \end{Verbatim}
 
     \begin{tcolorbox}[breakable, size=fbox, boxrule=1pt, pad at break*=1mm,colback=cellbackground, colframe=cellborder]
-\prompt{In}{incolor}{31}{\boxspacing}
+\prompt{In}{incolor}{15}{\boxspacing}
 \begin{Verbatim}[commandchars=\\\{\}]
 \PY{c+c1}{\PYZsh{}\PYZsh{}\PYZsh{} Plotted example}
 \PY{n}{ex}\PY{o}{=}\PY{n}{PLA\PYZus{}run\PYZus{}linreginit}\PY{p}{(}\PY{l+m+mi}{10}\PY{p}{,} \PY{n}{plot}\PY{o}{=}\PY{k+kc}{True}\PY{p}{)}
@@ -802,19 +805,19 @@ Average iterations for convergence: 0.0
 \end{tcolorbox}
 
     \begin{center}
-    \adjustimage{max size={0.9\linewidth}{0.9\paperheight}}{output_18_0.png}
+    \adjustimage{max size={0.9\linewidth}{0.9\paperheight}}{output_17_0.png}
     \end{center}
     { \hspace*{\fill} \\}
     
     \hypertarget{problem-8}{%
-\section{Problem 8}\label{problem-8}}
+\subsection{Problem 8}\label{problem-8}}
 
 \hypertarget{answer-d-0.5}{%
-\subsection{\texorpdfstring{Answer: {[}d{]}
+\subsubsection{\texorpdfstring{Answer: {[}d{]}
 \(0.5\)}{Answer: {[}d{]} 0.5}}\label{answer-d-0.5}}
 
 \hypertarget{code}{%
-\subsection{Code:}\label{code}}
+\subsubsection{Code:}\label{code}}
 
     \begin{tcolorbox}[breakable, size=fbox, boxrule=1pt, pad at break*=1mm,colback=cellbackground, colframe=cellborder]
 \prompt{In}{incolor}{12}{\boxspacing}
@@ -934,21 +937,21 @@ Average Eout: 0.5248650000000001
 \end{tcolorbox}
 
     \begin{center}
-    \adjustimage{max size={0.9\linewidth}{0.9\paperheight}}{output_22_0.png}
+    \adjustimage{max size={0.9\linewidth}{0.9\paperheight}}{output_21_0.png}
     \end{center}
     { \hspace*{\fill} \\}
     
     \hypertarget{problems-9-10}{%
-\section{Problems 9-10}\label{problems-9-10}}
+\subsection{Problems 9-10}\label{problems-9-10}}
 
 \hypertarget{answers-a-gx_1x_2rm-sign-1-0.05-x_10.08-x_20.13-x_1-x_21.5-x_121.5-x_22-b-0.1}{%
-\subsection{\texorpdfstring{Answers: {[}a{]}
+\subsubsection{\texorpdfstring{Answers: {[}a{]}
 \(g(x_1,x_2)={\rm sign}(-1-0.05 x_1+0.08 x_2+0.13 x_1 x_2+1.5 x_1^2+1.5 x_2^2)\)
 , {[}b{]}
 \(0.1\)}{Answers: {[}a{]} g(x\_1,x\_2)=\{\textbackslash{}rm sign\}(-1-0.05 x\_1+0.08 x\_2+0.13 x\_1 x\_2+1.5 x\_1\^{}2+1.5 x\_2\^{}2) , {[}b{]} 0.1}}\label{answers-a-gx_1x_2rm-sign-1-0.05-x_10.08-x_20.13-x_1-x_21.5-x_121.5-x_22-b-0.1}}
 
 \hypertarget{code}{%
-\subsection{Code:}\label{code}}
+\subsubsection{Code:}\label{code}}
 
     \begin{tcolorbox}[breakable, size=fbox, boxrule=1pt, pad at break*=1mm,colback=cellbackground, colframe=cellborder]
 \prompt{In}{incolor}{15}{\boxspacing}
@@ -1084,7 +1087,7 @@ probability of 0.573
 \end{tcolorbox}
 
     \begin{center}
-    \adjustimage{max size={0.9\linewidth}{0.9\paperheight}}{output_27_0.png}
+    \adjustimage{max size={0.9\linewidth}{0.9\paperheight}}{output_26_0.png}
     \end{center}
     { \hspace*{\fill} \\}
     
