--- a/Pset 3/Pset_3.ipynb
+++ b/Pset 3/Pset_3.ipynb
@@ -65,7 +65,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Problems 4\n",
+    "## Problem 4\n",
     "\n",
     "### Answer:  [b] 5\n",
     "\n",
@@ -119,24 +119,20 @@
     "\n",
     "A growth function $m_{\\mathcal{H}}(N)$ is well defined if one of the two following conditions are satisfied:\n",
     "\n",
-    "\\begin{itemize}\n",
-    "\\item $m_{\\mathcal{H}}(N)= 2^N$ for any N, or\n",
-    "\\item $m_{\\mathcal{H}}(N)$ is a polynomial function of N such that $m_{\\mathcal{H}}(N)\\le 2^N$ for any $N$.\n",
-    "\\end{itemize}\n",
+    "- $m_{\\mathcal{H}}(N)= 2^N$ for any N, or\n",
+    "- $m_{\\mathcal{H}}(N)$ is a polynomial function of N such that $m_{\\mathcal{H}}(N)\\le 2^N$ for any $N$.\n",
     "\n",
     "In the following, we verify the proposed functions.\n",
     "\n",
-    "\\begin{itemize}\n",
-    "i) $f_1(N)=1+N \\le 2^N$ OK!\n",
+    "- i) $f_1(N)=1+N \\le 2^N$ OK!\n",
     "\n",
-    "ii) $f_2(N)=1+N+{N\\choose 2}=1+N+\\frac{N!}{2!N-2!}=1+N+\\frac{N!}{2!N-2!}=1+N+\\frac{N(N-1)}{2}=1+\\frac{N(N+1)}{2}\\le 2^N$ OK!\n",
+    "- ii) $f_2(N)=1+N+{N\\choose 2}=1+N+\\frac{N!}{2!N-2!}=1+N+\\frac{N!}{2!N-2!}=1+N+\\frac{N(N-1)}{2}=1+\\frac{N(N+1)}{2}\\le 2^N$ OK!\n",
     "\n",
-    "iii) $f_3(N)=\\sum^{[\\sqrt{N}]}_{i=1} {N\\choose i} \\ge \\sum^{[\\sqrt{N}]}_{i=0}{[\\sqrt{N}]\\choose i}-1=2^{[\\sqrt{N}]}-1$. Hence, $f_3(N)$ is greater than a non-polynomial function in N, although smaller than $2^N$ for $N\\ge 1$. KO!\n",
+    "- iii) $f_3(N)=\\sum^{[\\sqrt{N}]}_{i=1} {N\\choose i} \\ge \\sum^{[\\sqrt{N}]}_{i=0}{[\\sqrt{N}]\\choose i}-1=2^{[\\sqrt{N}]}-1$. Hence, $f_3(N)$ is greater than a non-polynomial function in N, although smaller than $2^N$ for $N\\ge 1$. KO!\n",
     "\n",
-    "iv) $f_4(N)=2^{[N/2]}$. Again, it is a non-polynomial function smaller than $2^N$ for $N\\ge 1$.  KO!\n",
+    "- iv) $f_4(N)=2^{[N/2]}$. Again, it is a non-polynomial function smaller than $2^N$ for $N\\ge 1$.  KO!\n",
     "\n",
-    "v) $f_5(N)=2^{N}$. Trivially, this is a valid growth function.\n",
-    "\\end{itemize}"
+    "- v) $f_5(N)=2^{N}$. Trivially, this is a valid growth function. OK!"
    ]
   },
   {
