--- a/Pset 3/Pset_3.ipynb
+++ b/Pset 3/Pset_3.ipynb
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -206,16 +206,6 @@
       "needs_background": "light"
      },
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "47"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -241,9 +231,78 @@
     "plt.plot(xrange,2*xrange+1, label=\"b(M)=2M+1\", color='red')\n",
     "plt.scatter(xrange, bpts,label='break points')\n",
     "plt.legend()\n",
-    "plt.show()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Problem 9\n",
     "\n",
-    "growth_func()"
+    "### Answer:  [d] 7\n",
+    "\n",
+    "### Derivation:\n",
+    "\n",
+    "In this problem, we are asked to compute the largest number of points on the plane that can be shattered by a triangle hypothesis set, also knowns as its VC dimension $d_{VC}$.\n",
+    "We can proceed more generally and ask what is the VC dimension $d_{VC}(n)$ of a generic convex $n-$gon classification model on a plane. We can easily prove by simple arguments that $d_{VC}(n)=2n+1$ in two steps:\n",
+    "\n",
+    "- $d_{VC}(n)\\ge2n+1$\n",
+    "\n",
+    "We choose to put our $2n+1$ points on a circle. The only delicate dichotomies to be checked are the ones with $n$ or $n+1$ points that must be inside the poligon. In the first case, we will choose the $n$ points as the vertices of the polygon while in the other case we will take the outer $n$ points as tangent to the sides of the polygon. As an illustration, the triangle case is shown in the following. Therefore, we showed that a convex $n-$gon can shatter $2n+1$ points on a plane. Hence, its VC dimension has to be greater and equal than $2n+1$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.display import Image\n",
+    "Image(url= \"IMG_0164.jpg\", width=400, height=400)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- $d_{VC}(n)\\le 2n+1$\n",
+    "\n",
+    "In this case, we should be more careful and not assume a specific configuration for $2n+2$ points. There are two possible cases: either all the $2n+2$ points lie on a convex polygon $\\mathcal{P}$ or there is at least one point inside the polygon described by the other ones. \n",
+    "We can show now that there are two specific labeling that cannot be reproduced by the $n-$gon in both cases. \n",
+    "   \n",
+    "- First case: all the points lie on a convex polygon. If we alternate their labeling, we will need at least $n+1$ lines to separate the patterns since the convexity of $\\mathcal{P}$ doesn't allow to points to be separated by an internal line.\n",
+    "\n",
+    "- Second case: there is (at least) one point in the convex hull $\\mathcal{P}^\\prime$ of the other ones. In this case, the labeling that cannot be reproduced is when all points in the outer polygon are classified inside the $n-$gon and the point(s) inside is not. Clearly, any classification $n-$gon we may use completely includes $\\mathcal{P}^\\prime$, forcing its labeling to be the same as the other ones.\n",
+    "\n",
+    "An illustration of the two cases for the triangle classifier with $8$ points is in the following."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.display import Image\n",
+    "Image(url= \"IMG_0165.jpg\", width=400, height=400)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Problem 10\n",
+    "\n",
+    "### Answer:  [b] ${N+1\\choose2}+1$\n",
+    "\n",
+    "### Derivation:\n",
+    "\n",
+    "If we act on the data points we have through a non-linear transformation, parametrizing the data points as a function of their distance squared form the origin $\\rho^2=x_1^2+x_2^2$, the classification model of concentric circles reduces to the 1-(positive)interval model we explored above. Hence, the growth function will be the same, i.e.\n",
+    "\n",
+    "$$\n",
+    "m_{\\mathcal{H}(1)}(N)=\\sum^1_{k=0} {N+1\\choose2 k}={N+1\\choose2}+1\\,.\n",
+    "$$"
    ]
   },
   {
