Pset3 latex finished

--- a/TeX-files/Pset_3/Pset_3.tex
+++ b/TeX-files/Pset_3/Pset_3.tex
@@ -361,34 +361,31 @@
     
     \geometry{verbose,tmargin=1in,bmargin=1in,lmargin=1in,rmargin=1in}
     
-    
+\makeatletter
+\renewcommand{\@seccntformat}[1]{}
+\makeatother  
 
 \begin{document}
-    
+    \title{CS 156a - Problem Set 3}
+    \author{Samuel Patrone, 2140749}
     \maketitle
     
-    
 
-    
-    \hypertarget{cs-156a---problem-set-3}{%
-\section{CS 156a - Problem Set 3}\label{cs-156a---problem-set-3}}
+The following notebook is publicly available at the following
+\href{https://github.com/spatrone/CS156A-Caltech.git}{link}.
 
-\hypertarget{patrone-samuel-2140749}{%
-\subsubsection{Patrone Samuel, 2140749}\label{patrone-samuel-2140749}}
-
-The following notebook is publicly available at
-https://github.com/spatrone/CS156A-Caltech.git.
+\tableofcontents
 
     \hypertarget{problems-1-3}{%
-\subsection{Problems 1-3}\label{problems-1-3}}
+\section{Problems 1-3}\label{problems-1-3}}
 
 \hypertarget{answers-b-1000-c-1500-d-2000}{%
-\subsubsection{\texorpdfstring{Answers: {[}b{]} \(1000\), {[}c{]}
+\subsection{\texorpdfstring{Answers: {[}b{]} \(1000\), {[}c{]}
 \(1500\), {[}d{]}
 \(2000\)}{Answers: {[}b{]} 1000, {[}c{]} 1500, {[}d{]} 2000}}\label{answers-b-1000-c-1500-d-2000}}
 
 \hypertarget{derivation}{%
-\subsubsection{Derivation:}\label{derivation}}
+\subsection{Derivation:}\label{derivation}}
 
 We want to determine what is the least number of samples \(N\) needed
 for different number of hypothesis \(M\) such that the Hoeffding bound
@@ -428,13 +425,13 @@ with a tolerance of 0.05 is 1760 for M= 100
     \end{Verbatim}
 
     \hypertarget{problem-4}{%
-\subsection{Problem 4}\label{problem-4}}
+\section{Problem 4}\label{problem-4}}
 
 \hypertarget{answer-b-5}{%
-\subsubsection{Answer: {[}b{]} 5}\label{answer-b-5}}
+\subsection{Answer: {[}b{]} 5}\label{answer-b-5}}
 
 \hypertarget{derivation}{%
-\subsubsection{Derivation:}\label{derivation}}
+\subsection{Derivation:}\label{derivation}}
 
 A break point \(k\) for an hypothesis set \(\mathcal{H}\) is defined as
 the minimum number of points that cannot be shattered by
@@ -471,30 +468,21 @@ point \(5\) the same classification value as points \(2,3,4\). Hence,
 the break point for the \(3D\) Perceptron is \(5\).
 
 See attached some explanatory drawings.
-
-    \begin{tcolorbox}[breakable, size=fbox, boxrule=1pt, pad at break*=1mm,colback=cellbackground, colframe=cellborder]
-\prompt{In}{incolor}{2}{\boxspacing}
-\begin{Verbatim}[commandchars=\\\{\}]
-\PY{k+kn}{from} \PY{n+nn}{IPython}\PY{n+nn}{.}\PY{n+nn}{display} \PY{k}{import} \PY{n}{Image}
-\PY{n}{Image}\PY{p}{(}\PY{n}{url}\PY{o}{=} \PY{l+s+s2}{\PYZdq{}}\PY{l+s+s2}{IMG\PYZus{}0163.jpg}\PY{l+s+s2}{\PYZdq{}}\PY{p}{,} \PY{n}{width}\PY{o}{=}\PY{l+m+mi}{400}\PY{p}{,} \PY{n}{height}\PY{o}{=}\PY{l+m+mi}{400}\PY{p}{)}
-\end{Verbatim}
-\end{tcolorbox}
-
-            \begin{tcolorbox}[breakable, size=fbox, boxrule=.5pt, pad at break*=1mm, opacityfill=0]
-\prompt{Out}{outcolor}{2}{\boxspacing}
-\begin{Verbatim}[commandchars=\\\{\}]
-<IPython.core.display.Image object>
-\end{Verbatim}
-\end{tcolorbox}
+\begin{figure}
+    \centering
+    \includegraphics[scale=0.8]{Pset 3/IMG_0163.jpg}
+    \caption{3D Perceptron and its break point}
+    \label{fig:my_label}
+\end{figure}
         
     \hypertarget{problem-5}{%
-\subsection{Problem 5}\label{problem-5}}
+\section{Problem 5}\label{problem-5}}
 
 \hypertarget{answer-b-iiiv}{%
-\subsubsection{Answer: {[}b{]} i,ii,v}\label{answer-b-iiiv}}
+\subsection{Answer: {[}b{]} i,ii,v}\label{answer-b-iiiv}}
 
 \hypertarget{derivation}{%
-\subsubsection{Derivation:}\label{derivation}}
+\subsection{Derivation:}\label{derivation}}
 
 A growth function \(m_{\mathcal{H}}(N)\) is well defined if one of the
 two following conditions are satisfied:
@@ -557,13 +545,13 @@ In the following, we verify the proposed functions.
 \end{itemize}
 
     \hypertarget{problem-6}{%
-\subsection{Problem 6}\label{problem-6}}
+\section{Problem 6}\label{problem-6}}
 
 \hypertarget{answer-c-5}{%
-\subsubsection{Answer: {[}c{]} 5}\label{answer-c-5}}
+\subsection{Answer: {[}c{]} 5}\label{answer-c-5}}
 
 \hypertarget{derivation}{%
-\subsubsection{Derivation:}\label{derivation}}
+\subsection{Derivation:}\label{derivation}}
 
 2-intervals hypothesis set can shatter completely a data set of four
 points: this is because two intervals are able to reproduce all the
@@ -576,14 +564,14 @@ flip four times between adjacent points, e.g. \(\{+1,-1,+1,-1,+1\}\).
 Therefore, the break point for the 2-intervals hypothesis set is 5.
 
     \hypertarget{problem-7}{%
-\subsection{Problem 7}\label{problem-7}}
+\section{Problem 7}\label{problem-7}}
 
 \hypertarget{answer-c-n1choose4n1choose21}{%
-\subsubsection{\texorpdfstring{Answer: {[}c{]}
+\subsection{\texorpdfstring{Answer: {[}c{]}
 \({N+1\choose4}+{N+1\choose2}+1\)}{Answer: {[}c{]} \{N+1\textbackslash{}choose4\}+\{N+1\textbackslash{}choose2\}+1}}\label{answer-c-n1choose4n1choose21}}
 
 \hypertarget{derivation}{%
-\subsubsection{Derivation:}\label{derivation}}
+\subsection{Derivation:}\label{derivation}}
 
 In the following, we will prove the expression for the growth function
 for the most generic \(M-\)intervals hypothesis set. We notice that
@@ -609,14 +597,14 @@ m_{\mathcal{H}(2)}(N)=\sum^2_{k=0} {N+1\choose2 k}={N+1\choose4}+{N+1\choose2}+1
 \]
 
     \hypertarget{problem-8}{%
-\subsection{Problem 8}\label{problem-8}}
+\section{Problem 8}\label{problem-8}}
 
 \hypertarget{answer-d-2m1}{%
-\subsubsection{\texorpdfstring{Answer: {[}d{]}
+\subsection{\texorpdfstring{Answer: {[}d{]}
 \(2M+1\)}{Answer: {[}d{]} 2M+1}}\label{answer-d-2m1}}
 
 \hypertarget{derivation}{%
-\subsubsection{Derivation:}\label{derivation}}
+\subsection{Derivation:}\label{derivation}}
 
 Generalizing the result of Problem 6, we notice that for the
 \(M-\)intervals model, we need at least \(M+1\) flips of classification
@@ -662,13 +650,13 @@ function of \(M\).
     { \hspace*{\fill} \\}
     
     \hypertarget{problem-9}{%
-\subsection{Problem 9}\label{problem-9}}
+\section{Problem 9}\label{problem-9}}
 
 \hypertarget{answer-d-7}{%
-\subsubsection{Answer: {[}d{]} 7}\label{answer-d-7}}
+\subsection{Answer: {[}d{]} 7}\label{answer-d-7}}
 
 \hypertarget{derivation}{%
-\subsubsection{Derivation:}\label{derivation}}
+\subsection{Derivation:}\label{derivation}}
 
 In this problem, we are asked to compute the largest number of points on
 the plane that can be shattered by a triangle hypothesis set, also
@@ -693,20 +681,12 @@ we showed that a convex \(n-\)gon can shatter \(2n+1\) points on a
 plane. Hence, its VC dimension has to be greater and equal than
 \(2n+1\).
 
-    \begin{tcolorbox}[breakable, size=fbox, boxrule=1pt, pad at break*=1mm,colback=cellbackground, colframe=cellborder]
-\prompt{In}{incolor}{4}{\boxspacing}
-\begin{Verbatim}[commandchars=\\\{\}]
-\PY{k+kn}{from} \PY{n+nn}{IPython}\PY{n+nn}{.}\PY{n+nn}{display} \PY{k}{import} \PY{n}{Image}
-\PY{n}{Image}\PY{p}{(}\PY{n}{url}\PY{o}{=} \PY{l+s+s2}{\PYZdq{}}\PY{l+s+s2}{IMG\PYZus{}0164.jpg}\PY{l+s+s2}{\PYZdq{}}\PY{p}{,} \PY{n}{width}\PY{o}{=}\PY{l+m+mi}{400}\PY{p}{,} \PY{n}{height}\PY{o}{=}\PY{l+m+mi}{400}\PY{p}{)}
-\end{Verbatim}
-\end{tcolorbox}
-
-            \begin{tcolorbox}[breakable, size=fbox, boxrule=.5pt, pad at break*=1mm, opacityfill=0]
-\prompt{Out}{outcolor}{4}{\boxspacing}
-\begin{Verbatim}[commandchars=\\\{\}]
-<IPython.core.display.Image object>
-\end{Verbatim}
-\end{tcolorbox}
+ \begin{figure}
+    \centering
+    \includegraphics[scale=0.5]{Pset 3/IMG_0164.jpg}
+    \caption{Triangle shattering 7 points on a plane: two interesting configurations.}
+    \label{fig:my_label}
+\end{figure}
         
     \begin{itemize}
 \tightlist
@@ -740,30 +720,22 @@ reproduced by the \(n-\)gon in both cases.
 An illustration of the two cases for the triangle classifier with \(8\)
 points is in the following.
 
-    \begin{tcolorbox}[breakable, size=fbox, boxrule=1pt, pad at break*=1mm,colback=cellbackground, colframe=cellborder]
-\prompt{In}{incolor}{5}{\boxspacing}
-\begin{Verbatim}[commandchars=\\\{\}]
-\PY{k+kn}{from} \PY{n+nn}{IPython}\PY{n+nn}{.}\PY{n+nn}{display} \PY{k}{import} \PY{n}{Image}
-\PY{n}{Image}\PY{p}{(}\PY{n}{url}\PY{o}{=} \PY{l+s+s2}{\PYZdq{}}\PY{l+s+s2}{IMG\PYZus{}0165.jpg}\PY{l+s+s2}{\PYZdq{}}\PY{p}{,} \PY{n}{width}\PY{o}{=}\PY{l+m+mi}{400}\PY{p}{,} \PY{n}{height}\PY{o}{=}\PY{l+m+mi}{400}\PY{p}{)}
-\end{Verbatim}
-\end{tcolorbox}
-
-            \begin{tcolorbox}[breakable, size=fbox, boxrule=.5pt, pad at break*=1mm, opacityfill=0]
-\prompt{Out}{outcolor}{5}{\boxspacing}
-\begin{Verbatim}[commandchars=\\\{\}]
-<IPython.core.display.Image object>
-\end{Verbatim}
-\end{tcolorbox}
+\begin{figure}
+    \centering
+    \includegraphics[scale=0.5]{Pset 3/IMG_0165.jpg}
+    \caption{Break point for the triangle classifier.}
+    \label{fig:my_label}
+\end{figure}
         
     \hypertarget{problem-10}{%
-\subsection{Problem 10}\label{problem-10}}
+\section{Problem 10}\label{problem-10}}
 
 \hypertarget{answer-b-n1choose21}{%
-\subsubsection{\texorpdfstring{Answer: {[}b{]}
+\subsection{\texorpdfstring{Answer: {[}b{]}
 \({N+1\choose2}+1\)}{Answer: {[}b{]} \{N+1\textbackslash{}choose2\}+1}}\label{answer-b-n1choose21}}
 
 \hypertarget{derivation}{%
-\subsubsection{Derivation:}\label{derivation}}
+\subsection{Derivation:}\label{derivation}}
 
 If we act on the data points we have through a non-linear
 transformation, parametrizing the data points as a function of their
