Updates from Overleaf

--- a/TeX-files/Pset_3/Pset_3.tex
+++ b/TeX-files/Pset_3/Pset_3.tex
@@ -683,7 +683,7 @@ plane. Hence, its VC dimension has to be greater and equal than
 
  \begin{figure}
     \centering
-    \includegraphics[scale=0.5]{Pset 3/IMG_0164.jpg}
+    \includegraphics[scale=0.8]{Pset 3/IMG_0164.jpg}
     \caption{Triangle shattering 7 points on a plane: two interesting configurations.}
     \label{fig:my_label}
 \end{figure}
@@ -722,11 +722,13 @@ points is in the following.
 
 \begin{figure}
     \centering
-    \includegraphics[scale=0.5]{Pset 3/IMG_0165.jpg}
+    \includegraphics[scale=0.8]{Pset 3/IMG_0165.jpg}
     \caption{Break point for the triangle classifier.}
     \label{fig:my_label}
 \end{figure}
-        
+
+\pagebreak
+
     \hypertarget{problem-10}{%
 \section{Problem 10}\label{problem-10}}
 
